tests/errors/error_display/test_hll_undeclared_variable_display.si

        fn f() -> i64 {
            let x = y;
            x
        }
    